--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet" />
+    <!-- Preload critical background image -->
+    <link rel="preload" href="/bg.jpg" as="image" />
     <title>ZipNGo</title>
   </head>
   <body>
